# thrust_vectoring_consolidated

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TVR.code-workspace  casdklflaksdflj  e
embedded-software/firmware/libs/controls/: CMakeLists.txt
embedded-software/firmware/libs/controls/build-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_controls
embedded-software/firmware/libs/controls/build-tests/controls/: CTestTestfile.cmake  Makefile  cmake_install.cmake
embedded-software/firmware/libs/controls/build-tests/state_estimation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
embedded-software/firmware/libs/controls/build-tests/unity/: CTestTestfile.cmake  Makefile  cmake_install.cmake
embedded-software/firmware/libs/controls/include/controls/: control_loop.h  filght_controller.h  flight_controller.h  pid.h  pwm.h
embedded-software/firmware/libs/controls/src/: control_loop.c  flight_controller.c  pid.c  pwm.c
embedded-software/firmware/libs/controls/tests/: CMakeLists.txt  test_flight_controller.c  test_main.c  test_pid.c  test_pwm.c
embedded-software/firmware/libs/log_records/: CMakeLists.txt
embedded-software/firmware/libs/log_records/src/: log_frame.c
embedded-software/firmware/libs/sensors/: CMakeLists.txt
embedded-software/firmware/libs/sensors/src/: bmi088_accel.c  icm40609.c  mauwb.c  ms5611_baro.c  sen0306_mmwave.c
embedded-software/firmware/libs/sensors/tests/: CMakeLists.txt  test_icm40609_builders.c  test_main.c
embedded-software/firmware/libs/state_estimation/: CMakeLists.txt
embedded-software/firmware/libs/state_estimation/src/: body.c  calibration.c  ekf.c  matrix.c  quaternion.c  state_math.c
embedded-software/firmware/libs/state_estimation/tests/: CMakeLists.txt  analysis.py  generate_trajectory.py  test_ekf.c  test_eskf_trajectory.c  test_main.c  test_matrix.c  test_quaternion.c
embedded-software/firmware/libs/timestamp/: CMakeLists.txt
embedded-software/firmware/libs/timestamp/src/: timestamp.c
embedded-software/firmware/libs/trilateration/: CMakeLists.txt
embedded-software/firmware/libs/trilateration/include/: trilat.h
embedded-software/firmware/libs/trilateration/simulation/: sim.py
embedded-software/firmware/libs/trilateration/src/: trilat.c
embedded-software/firmware/libs/trilateration/tests/: CMakeLists.txt  GaussNewton.py  test_main.c  test_trilat.c
embedded-software/firmware/libs/utilities/: CMakeLists.txt
embedded-software/firmware/libs/utilities/include/: clamp.h
embedded-software/firmware/libs/utilities/src/: clamp.c
embedded-software/firmware/ulysses-flight-controller/tests/: CMakeLists.txt  test_icm40609_device.c  test_main.c
embedded-software/firmware/ulysses-flight-controller/tests/fakes/: main.h  stm32h5xx_hal.h  sync.h  timestamp.h
embedded-software/firmware/ulysses-flight-controller/tests/test_support/: fake_stm32_runtime.c  fake_stm32_runtime.h
embedded-software/ground-station/: CMakeLists.txt
embedded-software/ground-station/HeadFiles/: CommandSender.h  PresetManager.h  SensorDataModel.h
embedded-software/ground-station/QMLFiles/: Header.qml  LayoutGrid.qml  Main.qml
embedded-software/ground-station/QMLFiles/Items/: DataBox.qml  DataBoxList.qml  ModeBar.qml  NumberField.qml  PrimaryButton.qml  ThemedCheckBox.qml  ThemedScrollBar.qml  ThemedTabButton.qml
embedded-software/ground-station/QMLFiles/Modes/: Mode_Diagnostics.qml  Mode_Flight.qml  Mode_Map.qml  Mode_Tuning.qml
embedded-software/ground-station/QMLFiles/Panels/: Panel_PID_Controller.qml  Panel_Probe_Map.qml  Panel_Radio_Console.qml  Panel_Radio_Output.qml  Panel_Rocket_Visualization.qml  Panel_State_And_Position.qml  Panel_System_Health.qml
embedded-software/ground-station/SourceFiles/: CommandSender.cpp  PresetManager.cpp  SensorDataModel.cpp  main.cpp
embedded-software/ground-station/build-linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  install_manifest.txt  ulysses_ground_control_qmltyperegistrations.cpp
embedded-software/ground-station/build-linux/.rcc/: qmake_ulysses_ground_control.qrc  ulysses_ground_control_raw_qml_0.qrc
embedded-software/ground-station/build-linux/.rcc/qmlcache/: ulysses_ground_control_qml_loader_file_list.rsp  ulysses_ground_control_qmlcache_loader.cpp
embedded-software/ground-station/build-linux/AppDir/: .DirIcon  AppRun
embedded-software/ground-station/build-linux/meta_types/: qt6ulysses_ground_control_release_metatypes.json.gen  ulysses_ground_control_json_file_list.txt  ulysses_ground_control_json_file_list.txt.timestamp
embedded-software/ground-station/build-linux/qmltypes/: ulysses_ground_control_foreign_types.txt
embedded-software/ground-station/build-linux/rocket-protocol/: Makefile  cmake_install.cmake
embedded-software/ground-station/build-linux/rocket-protocol/src/: Makefile  cmake_install.cmake
embedded-software/ground-station/build-linux/ulysses_ground_control/: qmldir
embedded-software/ground-station/build-linux/ulysses_ground_control_autogen/: mocs_compilation.cpp
embedded-software/ground-station/build-linux/ulysses_ground_control_autogen/CCHPTZ5OZL/: moc_AlarmReceiver.cpp.json  moc_CommandSender.cpp.json  moc_SensorDataModel.cpp.json  moc_SerialBridge.cpp.json
embedded-software/ground-station/distribution/Linux/: Dockerfile  README.md  build-appimage-docker.sh  build-appimage.sh  ulysses-ground-control.desktop
embedded-software/ground-station/distribution/MacOS/: README.md
embedded-software/ground-station/presets/: pid_presets.json
embedded-software/libs/rocket-protocol/: .gitignore  CMakeLists.txt  README.md
embedded-software/libs/rocket-protocol/cmake/: nanopb-generate.cmake
embedded-software/libs/rocket-protocol/include/rp/: codec.h
embedded-software/libs/rocket-protocol/proto/tvr/: common.proto  status.proto  telemetry.proto
embedded-software/libs/rocket-protocol/src/cobs/: cobs.c
libs/rocket-protocol/tests/unit/: CMakeLists.txt
libs/rocket-protocol/tests/unit/cobs/: test_cobs_encode_decode.c  test_cobs_get_max_encoded_size.c
(+518 files in other folders)
